--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
             <p class="user-name">Maria Anggriani Grasia </p>
             <a href="maria-anggriani-grasia/">Tautan Website</a>
         </div>
+        <div class="user-box">
+            <p class="user-name">Maria Eucensya Laura</p>
+            <a href="maria-eucensya-laura/">Tautan Website</a>
+        </div>
 
         <!--bagian footer-->
         <footer>
