--- a/maria-eucensya-laura/index.html
+++ b/maria-eucensya-laura/index.html
@@ -16,8 +16,8 @@
                 <li><a href="index.html"> Beranda </a></li>
                 <li><a href="about.html"> Tentang </a></li>
                 <li><a href="program.html"> Kosentrasi Keahlian </a></li>
-                <li><a href="Berita.html"> Berita </a></li>
-                <li><a href="Kontak.html"> Kontak </a></li>
+                <li><a href="berita.html"> Berita </a></li>
+                <li><a href="kontak.html"> Kontak </a></li>
             </ul>
         </nav>
     </header>
