--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             <p class="user-name">Maria Eucensya Laura</p>
             <a href="maria-eucensya-laura/">Tautan Website</a>
         </div>
+        <div class="user-box">
+            <p class="user-name">Maria Ita Purnamasari</p>
+            <a href="maria-ita-purnamasari/">Tautan Website</a>
+        </div>
 
         <!--bagian footer-->
         <footer>
