--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             text-align: center;
         }
         .container {
-            margin-top:10px;
+            margin: auto;
             max-width: 500px;
             background: white;
             padding: 20px;
