--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
             <p class="user-name">Maria Ita Purnamasari</p>
             <a href="maria-ita-purnamasari/">Tautan Website</a>
         </div>
+        <div class="user-box">
+            <p class="user-name">Yasinta Jelita</p>
+            <a href="yasinta-jelita/">Tautan Website</a>
+        </div>
 
         <!--bagian footer-->
         <footer>
